--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0"
+    "@emotion/styled": "^11.3.0",
+    "react-redux": "^7.2.4",
+    "@reduxjs/toolkit": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
